...
    <string name="btn_encrypt_text">"Encrypt text"</string>
    <string name="btn_add_email">"Add additional email address"</string>
    <string name="btn_unlock">"Unlock"</string>
    <string name="btn_proceed">"Proceed"</string>
    <string name="btn_save_default">"Save as default"</string>
    <string name="btn_saved">"Saved!"</string>
    <string name="btn_not_matching">"Not matching"</string>

...
    <string name="label_passphrase_again">"Repeat Password"</string>
    <string name="label_algorithm_colon">"Algorithm:"</string>
    <string name="label_file_ascii_armor">"Enable ASCII Armor"</string>
    <string name="label_asymmetric_from">"Sign with:"</string>
    <string name="label_to">"Encrypt to"</string>
    <string name="label_delete_after_encryption">"Delete files after encryption"</string>
    <string name="label_symmetric">"Encrypt with password"</string>
    <string name="label_passphrase_cache_subs">"Remember passwords by subkey"</string>
    <string name="label_keyservers">"Manage OpenPGP keyservers"</string>
...
    <string name="label_selected_keyserver_title">"Selected keyserver"</string>
    <string name="label_preferred">"preferred"</string>
    <string name="label_enable_compression">"Enable compression"</string>
    <string name="label_enable_self_encrypt">"Encrypt to signer"</string>
    <string name="label_encrypt_filenames">"Encrypt filenames"</string>
    <string name="label_smartpgp_verify">SmartPGP: Verify certificates</string>
    <string name="label_smartpgp_verify_summary">"Verify certificates on SmartPGP Security Tokens against a set of trusted authorities"</string>
...
    <string name="wrong_passphrase">"Wrong password."</string>
    <string name="no_filemanager_installed">"No compatible file manager installed."</string>
    <string name="passphrases_do_not_match">"The passwords didn't match."</string>
    <string name="passphrase_must_not_be_empty">"Please enter a password."</string>
    <string name="passphrase_for_symmetric_encryption">"Enter password"</string>
...
    <string name="file_delete_confirmation">"The following files will be deleted:%s"</string>
    <string name="file_delete_successful">"%1$d out of %2$d files have been deleted.%3$s"</string>
    <string name="no_file_selected">"No file selected."</string>
    <string name="select_encryption_key">"Select at least one encryption key."</string>
    <string name="error_no_encryption_or_signature_key">"Select at least one encryption key or a signature key."</string>
...
    <string name="msg_dc_error_extract_key">"Unknown error unlocking key!"</string>
    <string name="msg_dc_error_integrity_check">"Integrity check error!"</string>
    <string name="msg_dc_error_invalid_data">"No valid OpenPGP encrypted or signed data found!"</string>
    <string name="msg_dc_error_io">"Encountered an error reading input data!"</string>
    <string name="msg_dc_error_input">"Error opening input data stream!"</string>
...
    <string name="msg_se_error_output_uri_not_found">"Error opening URI for writing!"</string>
    <string name="msg_se_error_too_many_inputs">"More inputs than outputs specified! This is probably a programming error, please report!"</string>
    <string name="msg_se_success">"Sign/encrypt operation successful"</string>

    <!-- Messages for PgpSignEncrypt operation -->
...

    <string name="snack_encrypt_filenames_on">"Filenames <b>are</b> encrypted."</string>
    <string name="snack_encrypt_filenames_off">"Filenames <b>are not</b> encrypted."</string>
    <string name="snack_armor_on">"Output encoded as Text."</string>
    <string name="snack_armor_off">"Output encoded as Binary."</string>
    <string name="snack_compression_on">"Compression <b>enabled</b>."</string>
    <string name="snack_compression_off">"Compression <b>disabled</b>."</string>
    <string name="snack_self_encrypt_on">"Encrypt to signer <b>enabled</b>."</string>
    <string name="snack_self_encrypt_off">"Encrypt to signer <b>disabled</b>."</string>
...
    <string name="error_reading_k9">"Received incomplete data, try touching 'Download complete message' in K-9 Mail!"</string>
    <string name="filename_unknown">Unknown filename (touch to open)</string>
    <string name="filename_unknown_text">Text (touch to show)</string>
    <string name="filename_keys">"Key Backup (touch to import)"</string>
    <string name="intent_show">Show Signed/Encrypted Content</string>
...
    <string name="file_delete_none">"No file deleted! (Already deleted?)"</string>
    <string name="file_delete_exception">"Original file could not be deleted!"</string>
    <string name="error_clipboard_empty">"Clipboard is empty!"</string>
    <string name="error_clipboard_copy">"Error copying data to clipboard!"</string>
    <string name="error_clipboard_bad">"Could not read keys from clipboard!"</string>
...
