...
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/result_encryption_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="4dp"
                    android:src="@drawable/status_lock_open_24dp"
                    />

...
                android:layout_marginBottom="8dp"
                android:text=""
                android:layout_gravity="center_vertical"
                tools:text="Error processing data!" />

            <ImageView
                android:id="@+id/result_error_log"
                android:scaleType="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:padding="6dp"
                android:background="?android:selectableItemBackground"
...
